<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/body_dialog_installed_apps"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/header_dialog_installed_apps"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/installed_apps_info"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/fb_dialog_close_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_close_installed_apps" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </RelativeLayout>
            <TextView
                android:id="@+id/installed_apps_info_tv"
                android:textColor="@color/white"
                android:text="@string/installed_apps_info_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
            <!--<ImageView-->
                <!--android:src="@drawable/privacy_oriented"-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp" />-->

            <TextView
                android:textColor="@color/white"
                android:text="@string/installed_apps_info_txt_part2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>