<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/account_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/account_background"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_color"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="User account"
            app:titleTextColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/update_your_account_settings"
            android:textColor="@color/toolbar_color"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/toolbar_color" />

        <RelativeLayout
            android:id="@+id/change_password_rl"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/toolbar_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_tv"
                android:layout_marginTop="5dp"
                android:text="*******************"
                android:textColor="@color/toolbar_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/change_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/toolbar_color"
                android:paddingBottom="9dp"
                android:paddingEnd="@dimen/button_padding"
                android:paddingStart="@dimen/button_padding"
                android:paddingTop="9dp"
                android:textColor="@color/white">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_edit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:textAllCaps="false"
                    android:textColor="@color/notification_button_font_color"
                    android:textSize="15sp" />

            </LinearLayout>
        </RelativeLayout>

        <eu.operando.customView.ChangePasswordView
            android:id="@+id/change_password_expanded"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </eu.operando.customView.ChangePasswordView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/toolbar_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_deletion"
                android:textColor="@color/toolbar_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/delete_account_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:layout_marginTop="10dp"
                android:text="@string/account_deletion_description"
                android:textColor="@color/toolbar_color"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/delete_account_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/toolbar_color"
                android:paddingBottom="9dp"
                android:paddingEnd="@dimen/button_padding"
                android:paddingStart="@dimen/button_padding"
                android:paddingTop="9dp"
                android:textColor="@color/white">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/delete_identity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    android:textAllCaps="false"
                    android:textColor="@color/notification_button_font_color"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>