<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="15dp"
    android:paddingStart="15dp"
    android:paddingTop="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/current_password"
        android:textColor="@color/toolbar_color"
        android:textSize="@dimen/account_edit_text_hint" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@drawable/account_edit_text_border">

        <EditText
            android:id="@+id/current_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/account_background"
            android:inputType="textPassword"
            android:drawablePadding="0dp"
            android:textColor="@color/toolbar_color"
            android:textColorHint="@color/toolbar_color" />

    </RelativeLayout>

    <eu.operando.customView.PasswordConfirmationView
        android:id="@+id/password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </eu.operando.customView.PasswordConfirmationView>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/update_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_color"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/update_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/cancel_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right"
            android:background="@color/menu_text"
            android:gravity="right"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/action_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="normal" />

    </RelativeLayout>

</LinearLayout>